# rfh_testdatascience_2

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: Analisis_estacionalidad.ipynb  Test_Prod.ipynb
rfh_testdatascience_2/: __init__.py  config.py  main.py  model.py  preprocessing.py
